raise scroll-to-top button to avoid footer overlap

--- a/main.scss
+++ b/main.scss
@@ -675,7 +675,7 @@ header.major h2 {
 
 #return-to-top {
   position: fixed;
-  bottom: 20px;
+  bottom: 30px;
   right: 20px;
   background: $silver;
   width: 50px;
